Fixed fullscreen and resize in Firefox. Fixed IE8 Flash player issues. Testing on iPhone / iPad, Safari, Opera. Refactoring to tidy structure.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -123,6 +123,12 @@ body {
 .video .controls .legend span {
     font-size: 1.1em;
 }
+
+video {
+    width: 640px;
+    height: 360px;
+}
+
 /* }}} */
 
 /* vim:set ft=css sw=4 sts=4 fdm=marker : */
